[gd_scene load_steps=41 format=2]

[ext_resource path="res://Image/bg1080x1920.jpg" type="Texture" id=1]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Image/Achievement/Yo100.jpg" type="Texture" id=3]
[ext_resource path="res://Image/Achievement/Yo100g.jpg" type="Texture" id=4]
[ext_resource path="res://Scene/achievement_scene.gd" type="Script" id=5]
[ext_resource path="res://Image/gui_home.png" type="Texture" id=6]
[ext_resource path="res://Image/Achievement/total_broze100.jpg" type="Texture" id=7]
[ext_resource path="res://Image/Achievement/total_broze100g.jpg" type="Texture" id=8]
[ext_resource path="res://Image/Achievement/broze_m_bass100.jpg" type="Texture" id=9]
[ext_resource path="res://Image/Achievement/broze_m_bass100g.jpg" type="Texture" id=10]
[ext_resource path="res://Image/Achievement/broze_m_guitar100.png" type="Texture" id=11]
[ext_resource path="res://Image/Achievement/broze_m_guitar100g.png" type="Texture" id=12]
[ext_resource path="res://Image/Achievement/broze_m_turntable100g.png" type="Texture" id=13]
[ext_resource path="res://Image/Achievement/broze_m_drum100g.png" type="Texture" id=14]
[ext_resource path="res://Image/Achievement/broze_m_drum100.png" type="Texture" id=15]
[ext_resource path="res://Image/Achievement/broze_m_turntable100.png" type="Texture" id=16]
[ext_resource path="res://Image/player_Head_olayzzz.png" type="Texture" id=17]
[ext_resource path="res://Image/player_Head_mno.png" type="Texture" id=18]
[ext_resource path="res://Image/player_Head_Speng.png" type="Texture" id=19]
[ext_resource path="res://Image/player_Head_Ichuen.png" type="Texture" id=20]
[ext_resource path="res://Image/player_bt4Head.png" type="Texture" id=21]
[ext_resource path="res://Image/Achievement/total_silver100.jpg" type="Texture" id=22]
[ext_resource path="res://Image/Achievement/silver_mno100.png" type="Texture" id=23]
[ext_resource path="res://Image/Achievement/total_silver100g.jpg" type="Texture" id=24]
[ext_resource path="res://Image/Achievement/silver_mno100g.png" type="Texture" id=25]
[ext_resource path="res://Image/Achievement/total_gold100g.jpg" type="Texture" id=26]
[ext_resource path="res://Image/Achievement/silver_olay100.png" type="Texture" id=27]
[ext_resource path="res://Image/Achievement/silver_ichuen100g.png" type="Texture" id=28]
[ext_resource path="res://Image/Achievement/silver_speng100.png" type="Texture" id=29]
[ext_resource path="res://Image/Achievement/silver_ichuen100.png" type="Texture" id=30]
[ext_resource path="res://Image/Achievement/silver_speng100g.png" type="Texture" id=31]
[ext_resource path="res://Image/Achievement/total_gold100.jpg" type="Texture" id=32]
[ext_resource path="res://Image/Achievement/silver_olay100g.png" type="Texture" id=33]

[sub_resource type="DynamicFont" id=6]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 44
outline_size = 1
font_data = ExtResource( 2 )

[node name="achievement_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="HomeBT" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_right = 140.0
margin_bottom = 64.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 6 )
flat = true

[node name="player_head_vbox" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 438.0

[node name="PlayerHeadMno" type="TextureRect" parent="player_head_vbox"]
margin_right = 350.0
margin_bottom = 91.0
texture = ExtResource( 18 )

[node name="PlayerHeadOlayzzz" type="TextureRect" parent="player_head_vbox"]
margin_top = 95.0
margin_right = 350.0
margin_bottom = 186.0
texture = ExtResource( 17 )

[node name="PlayerHeadSpeng" type="TextureRect" parent="player_head_vbox"]
margin_top = 190.0
margin_right = 350.0
margin_bottom = 281.0
texture = ExtResource( 19 )

[node name="PlayerHeadIchuen" type="TextureRect" parent="player_head_vbox"]
margin_top = 285.0
margin_right = 350.0
margin_bottom = 376.0
texture = ExtResource( 20 )

[node name="TextureRect" type="TextureRect" parent="player_head_vbox"]
margin_top = 380.0
margin_right = 350.0
margin_bottom = 471.0
texture = ExtResource( 21 )

[node name="score_vbox" type="VBoxContainer" parent="."]
margin_left = 162.0
margin_top = 57.0
margin_right = 512.0
margin_bottom = 543.0

[node name="ClickMno" type="Label" parent="score_vbox"]
margin_right = 350.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.878431, 0.537255, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ClickOlay" type="Label" parent="score_vbox"]
margin_top = 98.0
margin_right = 350.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.419608, 0.498039, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSpeng" type="Label" parent="score_vbox"]
margin_top = 196.0
margin_right = 350.0
margin_bottom = 290.0
custom_colors/font_color = Color( 0.92549, 0.972549, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickIchuen" type="Label" parent="score_vbox"]
margin_top = 294.0
margin_right = 350.0
margin_bottom = 388.0
custom_colors/font_color = Color( 0.772549, 0, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScores" type="Label" parent="score_vbox"]
margin_top = 392.0
margin_right = 350.0
margin_bottom = 486.0
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 400.0
margin_top = 75.0
margin_right = 859.0
margin_bottom = 695.0

[node name="yo_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 459.0
margin_bottom = 100.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/yo_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/yo_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "Yo! Jaturas
5 total scores"
text = "Yo! Jaturas
5 total scores"

[node name="Label" type="Label" parent="VBoxContainer/yo_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="total_bronze_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 459.0
margin_bottom = 204.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/total_bronze_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/total_bronze_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "Total Bronze
10 total scores"
text = "Total Bronze
10 total scores"

[node name="Label" type="Label" parent="VBoxContainer/total_bronze_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="bass_bronze_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 459.0
margin_bottom = 308.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/bass_bronze_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/bass_bronze_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "Bass Bronze
10 bass scores"
text = "Bass Bronze
10 bass scores"

[node name="Label" type="Label" parent="VBoxContainer/bass_bronze_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="guitar_bronze_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 459.0
margin_bottom = 412.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/guitar_bronze_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 11 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/guitar_bronze_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "Guitar Bronze
10 guitar scores"
text = "Guitar Bronze
10 guitar scores"

[node name="Label" type="Label" parent="VBoxContainer/guitar_bronze_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="turntable_bronze_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 416.0
margin_right = 459.0
margin_bottom = 516.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/turntable_bronze_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 16 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/turntable_bronze_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Turntable Bronze
10 turntable scores"
text = "Turntable Bronze
10 turntable scores"

[node name="Label" type="Label" parent="VBoxContainer/turntable_bronze_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="drum_bronze_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 520.0
margin_right = 459.0
margin_bottom = 620.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/drum_bronze_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/drum_bronze_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Drum Bronze
10 drum scores"
text = "Drum Bronze
10 drum scores"

[node name="Label" type="Label" parent="VBoxContainer/drum_bronze_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="total_silver_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 459.0
margin_bottom = 724.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/total_silver_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 24 )
texture_progress = ExtResource( 22 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/total_silver_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Total Silver
100 total scores"
text = "Total Silver
100 total scores"

[node name="Label" type="Label" parent="VBoxContainer/total_silver_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="mno_silver_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 728.0
margin_right = 459.0
margin_bottom = 828.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/mno_silver_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 25 )
texture_progress = ExtResource( 23 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/mno_silver_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Mno Silver
100 mno scores"
text = "Mno Silver
100 mno scores"

[node name="Label" type="Label" parent="VBoxContainer/mno_silver_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="speng_silver_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 832.0
margin_right = 459.0
margin_bottom = 932.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/speng_silver_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 31 )
texture_progress = ExtResource( 29 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/speng_silver_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Speng Silver
10 drum scores"
text = "Speng Silver
10 drum scores"

[node name="Label" type="Label" parent="VBoxContainer/speng_silver_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="ichuen_silver_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 936.0
margin_right = 459.0
margin_bottom = 1036.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/ichuen_silver_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 28 )
texture_progress = ExtResource( 30 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ichuen_silver_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Ichuen Silver
100 ichuen scores"
text = "Ichuen Silver
100 ichuen scores"

[node name="Label" type="Label" parent="VBoxContainer/ichuen_silver_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="olay_silver_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1040.0
margin_right = 459.0
margin_bottom = 1140.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/olay_silver_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 33 )
texture_progress = ExtResource( 27 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/olay_silver_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Olay Bronze
10 olay scores"
text = "Olay Bronze
10 olay scores"

[node name="Label" type="Label" parent="VBoxContainer/olay_silver_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[node name="total_gold_hbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1144.0
margin_right = 459.0
margin_bottom = 1244.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/total_gold_hbox"]
margin_right = 100.0
margin_bottom = 100.0
max_value = 5.0
texture_under = ExtResource( 26 )
texture_progress = ExtResource( 32 )
fill_mode = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/total_gold_hbox"]
margin_left = 104.0
margin_right = 404.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Total Gold
200 total scores"
text = "Total Gold
200 total scores"

[node name="Label" type="Label" parent="VBoxContainer/total_gold_hbox"]
margin_left = 408.0
margin_top = 12.0
margin_right = 459.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0%"

[connection signal="pressed" from="HomeBT" to="." method="_on_HomeBT_pressed"]
